# JavaScriptTypeScript

./: .gitattributes  .gitignore  ACADEMIC_ALIGNMENT_2026.md  COMPLETE_DOCUMENTATION_INDEX.md  CONTENT_RESTRUCTURING_PLAN_2026.md  CONTRIBUTING.md  CRITICAL_ANALYSIS_AND_IMPROVEMENT_PLAN.md  ECOSYSTEM_TRENDS_2026.md  FINAL_COMPLETION_REPORT.md  GLOSSARY.md  LICENSE  MIGRATION_MAP.md  NAVIGATION.md  NEXT_PHASE_PLAN.md  PROJECT_ALIGNMENT_AUDIT_2026.md  PROJECT_ANALYSIS.md  PROJECT_REARCHITECTURE_PLAN_2026.md  README-EN.md  README.md  SECURITY.md  SUSTAINABLE_IMPROVEMENT_PLAN_2026.md  SUSTAINABLE_IMPROVEMENT_PLAN_2026_DYNAMIC.md  SYMMETRIC_DIFFERENCE_ANALYSIS_2026.md  Svelte_Signals_Mermaid_Plan.md  Svelte_Signals_Next_Phase_Plan.md  Svelte_Signals_Restructuring_Plan.md  TECH_LANDSCAPE_2026_COMPREHENSIVE.md  THEORETICAL_ARCHITECTURE_PLAN.md  _analyze_final.js  _analyze_final2.js  _analyze_links.js  _analyze_links2.js  _fill-categories.js  _scan-deepening.js  _scan-todo.js  _skip_no_dir.json  _skip_old_dir.json  _skip_special.json  _skipped_final.json  _temp_create_codelab.py  (+27 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  link-check-config.json
20-code-lab/: CROSS-REFERENCE.md  README.md
30-knowledge-base/: README.md  application-domains-index.md  decision-trees.md  frameworks-index.md  infrastructure-index.md  language-core-index.md
40-ecosystem/: README.md
examples/desktop-tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
examples/desktop-tauri-react/src-tauri/capabilities/: default.json
examples/desktop-tauri-react/src-tauri/src/: lib.rs  main.rs
(+8058 files in other folders)
