[package]
name = "desktop-tauri-react"
version = "1.0.0"
description = "基于 Tauri v2 + React 19 的跨平台桌面应用"
authors = ["JavaScriptTypeScript Project"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
# Tauri 核心运行时
tauri = { version = "2.0.0", features = [] }

# Tauri 插件（v2 采用插件化架构）
tauri-plugin-clipboard-manager = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-fs = "2.0.0"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 日志
log = "0.4"
tauri-plugin-log = { version = "2.0.0", features = ["colored"] }

[features]
# 默认特性集
default = ["custom-protocol"]
# 自定义协议用于生产构建（必须使用 https 协议）
custom-protocol = ["tauri/custom-protocol"]
